--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "ReduxCounterExample",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node_modules/react-native/packager/packager.sh"
+    "start": "node_modules/react-native/packager/packager.sh",
+    "clean-dependency": "rm -rf node_modules/react-native/node_modules/react; rm -rf node_modules/react-native/node_modules/fbjs; rm -rf node_modules/react/node_modules/fbjs"
   },
   "dependencies": {
-    "react-native": "^0.11.2",
-    "react-redux": "^3.0.0",
-    "redux": "^3.0.0",
-    "redux-thunk": "^1.0.0"
+    "fbjs": "^0.6.1",
+    "react-native": "0.18.1",
+    "react-redux": "4.0.6",
+    "redux": "3.0.5",
+    "redux-thunk": "1.0.3"
   }
 }
