--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node_modules/react-native/packager/packager.sh",
-    "clean-dependency": "rm -rf node_modules/react-native/node_modules/react; rm -rf node_modules/react-native/node_modules/fbjs; rm -rf node_modules/react/node_modules/fbjs"
+    "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "fbjs": "^0.6.1",
-    "react-native": "0.18.1",
-    "react-redux": "4.0.6",
-    "redux": "3.0.5",
+    "react-native": "0.20.0",
+    "react-redux": "4.4.0",
+    "redux": "3.3.1",
     "redux-thunk": "1.0.3"
   }
 }
